--- a/portfolio/src/main/resources/templates/editDeadline.html
+++ b/portfolio/src/main/resources/templates/editDeadline.html
@@ -36,8 +36,9 @@
         <form id="form__body" class="flex-column" th:action="@{editDeadline-{deadline}-{project}(project=${parentProjectId}, deadline=${deadlineId})}" th:method="post">
             <label for="form__name-field">Name *</label>
 
-            <input type="text" id="form__name-field" class="edit-input" name="deadlineName" maxlength="30" placeholder="Deadline name" th:value="${deadline.deadlineName}" th:pattern="${titlePattern}" required title="Deadline Name must not be blank, and must not contain special chars" onkeyup="countCharacters()">
+            <input type="text" id="form__name-field" class="edit-input" name="deadlineName" maxlength="30" placeholder="Deadline name" th:value="${deadline.deadlineName}" th:pattern="${isNotBlankPattern}" required title="Deadline name must not be blank nor contain special characters" onkeyup="countCharacters()">
             <span id="char_count">30/30 characters remain</span>
+            <p th:text="${titleError}" class="form-error-message"></p>
 
             <label for="form__date-field">Date *</label>
             <input type="datetime-local" id="form__date-field" class="edit-input" name="deadlineDate" th:placeholder="${deadlineDate}" th:value="${deadlineDate}" th:min="${minDeadlineDate}" th:max="${maxDeadlineDate}" required>
