--- a/portfolio/src/main/resources/static/styles/stylesheet.css
+++ b/portfolio/src/main/resources/static/styles/stylesheet.css
@@ -107,3 +107,10 @@ a:hover {
     border-radius: 0.25em;
     /*padding: 0.5em;*/
 }
+
+.form-error-message {
+    margin-left: 10px;
+    color: red;
+    margin-top: -5px;
+    margin-bottom: 10px;
+}
