--- a/portfolio/src/main/resources/templates/editDeadline.html
+++ b/portfolio/src/main/resources/templates/editDeadline.html
@@ -36,7 +36,7 @@
         <form id="form__body" class="flex-column" th:action="@{editDeadline-{deadline}-{project}(project=${parentProjectId}, deadline=${deadlineId})}" th:method="post">
             <label for="form__name-field">Name *</label>
 
-            <input type="text" id="form__name-field" class="edit-input" name="deadlineName" maxlength="30" placeholder="Deadline name" th:value="${deadline.deadlineName}" th:pattern="${isNotBlankPattern}" required title="Deadline name must not be blank nor contain special characters" onkeyup="countCharacters()">
+            <input type="text" id="form__name-field" class="edit-input" name="deadlineName" maxlength="30" placeholder="Deadline name" th:value="${deadline.deadlineName}" th:pattern="${isNotBlankPattern}" title="Deadline name must not be blank nor contain special characters" onkeyup="countCharacters()">
             <span id="char_count">30/30 characters remain</span>
             <p th:text="${titleError}" class="form-error-message"></p>
 
