--- a/portfolio/src/main/resources/templates/editUser.html
+++ b/portfolio/src/main/resources/templates/editUser.html
@@ -25,41 +25,59 @@
                     <div>
                         <input type="hidden" th:name="username"  th:value="${user.username}" />
                         <label>Account Details *</label><br>
+
                         <input type="email" th:name="email" minlength="1" maxlength="255" required th:value="${editedEmail} ?:${user.email}" class="required" /><label class="helper" >Email required</label><br>
                         <th:block th:each="validationError: ${validationErrors}" th:if="${validationError.FieldName == 'email'}">
                             <p th:text="${validationError.ErrorText}" class="form-error-message"></p>
                         </th:block>
                         <br>
+
                         <label>Full Name *</label><br>
+
                         <input type="text" th:name="firstName" minlength="1" maxlength="64" required th:value="${editedFirstName} ?:${user.firstName}" class="required" /><label class="helper" >First name required</label><br>
+                        <p th:text="${firstNameError}" class="form-error-message"></p>
                         <th:block th:each="validationError: ${validationErrors}" th:if="${validationError.FieldName == 'firstName'}">
                             <p th:text="${validationError.ErrorText}" class="form-error-message"></p>
                         </th:block>
+
+
                         <input type="text" th:name="middleName" minlength="1" maxlength="64" th:value="${editedMiddleName} ?:${user.middleName}" /><label class="helper" >Middle name optional</label><br>
+                        <p th:text="${middleNameError}" class="form-error-message"></p>
                         <th:block th:each="validationError: ${validationErrors}" th:if="${validationError.FieldName == 'middleName'}">
                             <p th:text="${validationError.ErrorText}" class="form-error-message"></p>
                         </th:block>
+
+
                         <input type="text" th:name="lastName" minlength="1" maxlength="64" required th:value="${editedLastName} ?:${user.lastName}" class="required" /><label class="helper" >Last name required</label><br>
+                        <p th:text="${lastNameError}" class="form-error-message"></p>
                         <th:block th:each="validationError: ${validationErrors}" th:if="${validationError.FieldName == 'lastName'}">
                             <p th:text="${validationError.ErrorText}" class="form-error-message"></p>
                         </th:block>
                         <br>
+
                         <label>Person Details</label><br>
+
                         <input type="text" th:name="nickname" maxlength="64" th:value="${editedNickname} ?:${user.nickname}"/><label class="helper">Nickname - optional</label><br>
+                        <p th:text="${nicknameError}" class="form-error-message"></p>
                         <th:block th:each="validationError: ${validationErrors}" th:if="${validationError.FieldName == 'nickname'}">
                             <p th:text="${validationError.ErrorText}" class="form-error-message"></p>
                         </th:block>
+
                         <input type="text" th:name="pronouns" maxlength="64" th:value="${editedPronouns} ?:${user.personalPronouns}" /><label class="helper">Person Pronouns - optional</label><br>
+                        <p th:text="${pronounsError}" class="form-error-message"></p>
                         <th:block th:each="validationError: ${validationErrors}" th:if="${validationError.FieldName == 'personalPronouns'}">
                             <p th:text="${validationError.ErrorText}" class="form-error-message"></p>
                         </th:block>
                         <br>
+
                         <label>Bio</label><label class="helper">Optional</label><br>
                         <textarea th:name="bio" maxlength="1024" th:text="${editedBio} ?:${user.bio}"></textarea>
+                        <p th:text="${bioError}" class="form-error-message"></p>
                         <th:block th:each="validationError: ${validationErrors}" th:if="${validationError.FieldName == 'bio'}">
                             <p th:text="${validationError.ErrorText}" class="form-error-message"></p>
                         </th:block>
                         <br>
+
                         <div>
                         <p th:text="${editMessage}" class="form-error-message"></p>
                         <p th:text="${errorMessage}" class="form-error-message"></p>
