--- a/portfolio/src/main/resources/templates/editUser.html
+++ b/portfolio/src/main/resources/templates/editUser.html
@@ -26,7 +26,8 @@
                         <input type="hidden" th:name="username"  th:value="${user.username}" />
                         <label>Account Details *</label><br>
 
-                        <input type="email" th:name="email" minlength="1" maxlength="255" required th:value="${editedEmail} ?:${user.email}" class="required" /><label class="helper" >Email required</label><br>
+                        <input type="text" th:name="email" minlength="1" maxlength="255" required th:value="${editedEmail} ?:${user.email}" pattern="^[A-Za-z0-9+_.-]+@(.+)$" required /><label class="helper" >Email required</label><br>
+                        <p th:text="${emailError}" class="form-error-message"></p>
                         <th:block th:each="validationError: ${validationErrors}" th:if="${validationError.FieldName == 'email'}">
                             <p th:text="${validationError.ErrorText}" class="form-error-message"></p>
                         </th:block>
@@ -34,7 +35,7 @@
 
                         <label>Full Name *</label><br>
 
-                        <input type="text" th:name="firstName" minlength="1" maxlength="64" required th:value="${editedFirstName} ?:${user.firstName}" class="required" /><label class="helper" >First name required</label><br>
+                        <input type="text" th:name="firstName" minlength="1" maxlength="64" required th:value="${editedFirstName} ?:${user.firstName}" class="required" th:pattern="${isNotBlankPattern}"/><label class="helper" >First name required</label><br>
                         <p th:text="${firstNameError}" class="form-error-message"></p>
                         <th:block th:each="validationError: ${validationErrors}" th:if="${validationError.FieldName == 'firstName'}">
                             <p th:text="${validationError.ErrorText}" class="form-error-message"></p>
@@ -48,7 +49,7 @@
                         </th:block>
 
 
-                        <input type="text" th:name="lastName" minlength="1" maxlength="64" required th:value="${editedLastName} ?:${user.lastName}" class="required" /><label class="helper" >Last name required</label><br>
+                        <input type="text" th:name="lastName" minlength="1" maxlength="64" required th:value="${editedLastName} ?:${user.lastName}" class="required" th:pattern="${isNotBlankPattern}"/><label class="helper" >Last name required</label><br>
                         <p th:text="${lastNameError}" class="form-error-message"></p>
                         <th:block th:each="validationError: ${validationErrors}" th:if="${validationError.FieldName == 'lastName'}">
                             <p th:text="${validationError.ErrorText}" class="form-error-message"></p>
