--- a/portfolio/src/main/resources/templates/addEditGroup.html
+++ b/portfolio/src/main/resources/templates/addEditGroup.html
@@ -38,6 +38,7 @@
                 <p th:text="${shortNameErrorMessage}" class="form-error-message"></p>
                 <input type="text" id="group-form__short_name-field" class="edit-input" name="groupShortName" maxlength="20" placeholder="Group Short Name" th:value="${groupShortName}" th:pattern="${titlePattern}" title="Group Name must not be blank and cannot contain special characters" required onkeyup="countShortNameCharacters()">
                 <span id="char_count_short_name">20/20 characters remain</span>
+                <p th:text="${shortNameError}" class="form-error-message"></p>
             </div>
             <div th:if="${!authUserIsPrivileged}">
                 <label for="group-form__short_name-field">Group Short Name *</label>
@@ -53,6 +54,7 @@
             <p th:text="${longNameErrorMessage}" class="form-error-message"></p>
             <input type="text" id="group-form__long_name-field" class="edit-input" name="groupLongName" maxlength="30" placeholder="Group Long Name" th:value="${groupLongName}" th:pattern="${titlePattern}" title="Group long name must not be blank" required onkeyup="countLongNameCharacters()">
             <span id="char_count_long_name">30/30 characters remain</span>
+            <p th:text="${longNameError}" class="form-error-message"></p>
 
             <button type="submit" id="group-form__save">Save Changes</button>
             <a id="group-form__discard" th:href="@{groups}">Discard</a>
