--- a/portfolio/src/main/resources/templates/templatesEvidence/addEvidence.html
+++ b/portfolio/src/main/resources/templates/templatesEvidence/addEvidence.html
@@ -118,7 +118,7 @@
                 <div id="user-container">
                     <div class="input-container">
                         <input type="text" id="users-input" th:value="${evidenceUsers}" contenteditable="true" autocomplete="off"
-                               placeholder="Add Skills"/>
+                               placeholder="Add Users"/>
                     </div>
                 </div>
             </div>
