--- a/portfolio/src/main/resources/static/styles/evidence/evidence.css
+++ b/portfolio/src/main/resources/static/styles/evidence/evidence.css
@@ -216,9 +216,46 @@ html {
     float: right;
 }
 
-
-
 .evidence__skills {
     display: flex;
     flex-wrap: wrap;
+}
+
+.user-tag-con {
+    display: inline-flex;
+    margin: 4px;
+}
+
+.user-tag {
+    width: fit-content;
+    height: fit-content;
+    background-color: var(--color-primary);
+    border: 1px solid var(--color-secondary);
+    padding: 2px 4px 2px 4px;
+    display: inline-block;
+    border-radius: 5px;
+    overflow-wrap: anywhere;
+    text-align: center;
+}
+
+.user-tag-inside {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.user-tag-image {
+    width: 50px;
+    height: 50px;
+    border-radius: 5px;
+}
+
+.user-tag-text {
+    flex-direction: column;
+    padding-left: 10px
+}
+
+.user-tag-nickname {
+    color: #636363;
 }
