--- a/portfolio/src/main/resources/static/styles/evidence/evidence.css
+++ b/portfolio/src/main/resources/static/styles/evidence/evidence.css
@@ -91,6 +91,7 @@ html {
     border: 1px solid var(--color-accent);
     border-radius: 5px;
     background-color: transparent;
+    cursor: pointer;
 }
 
 .evidence-title--icon_container-delete {
@@ -123,7 +124,7 @@ html {
     cursor: pointer;
 }
 
-.evidence-title__child:hover, .evidence__title--icon_container:hover {
+.evidence-title__child:hover, .evidence__title--icon_container:hover, .evidence-title--icon_container-delete:hover {
     color: var(--color-accent);
 }
 
@@ -223,6 +224,7 @@ html {
 
 .user-tag-con {
     display: inline-flex;
+    flex-wrap: wrap;
     margin: 4px;
 }
 
@@ -235,6 +237,8 @@ html {
     display: inline-block;
     border-radius: 5px;
     overflow-wrap: anywhere;
+    margin-right: 5px;
+    margin-bottom: 5px;
     text-align: center;
 }
 
