--- a/portfolio/src/main/resources/templates/editUser.html
+++ b/portfolio/src/main/resources/templates/editUser.html
@@ -26,7 +26,7 @@
                         <input type="hidden" th:name="username"  th:value="${user.username}" />
                         <label>Account Details *</label><br>
 
-                        <input type="text" th:name="email" minlength="1" maxlength="255" required th:value="${editedEmail} ?:${user.email}" pattern="^[A-Za-z0-9+_.-]+@(.+)$" required /><label class="helper" >Email required</label><br>
+                        <input type="text" th:name="email" minlength="1" maxlength="255" th:value="${editedEmail} ?:${user.email}" pattern="^[A-Za-z0-9+_.-]+@(.+)$" required /><label class="helper" >Email required</label><br>
                         <p th:text="${emailError}" class="form-error-message"></p>
                         <th:block th:each="validationError: ${validationErrors}" th:if="${validationError.FieldName == 'email'}">
                             <p th:text="${validationError.ErrorText}" class="form-error-message"></p>
