--- a/portfolio/src/main/resources/templates/login.html
+++ b/portfolio/src/main/resources/templates/login.html
@@ -15,7 +15,7 @@
         <form th:action="${'login'}" method="post">
             <div class="row">
                 <label>
-                    <input type="text" required th:pattern="${isNotBlankPattern}" placeholder="Username" th:name="username">
+                    <input type="text" required th:pattern="${isNotBlankPattern}" title="Must not be blank" placeholder="Username" th:name="username">
                 </label>
             </div>
             <div class="row">
