#feature Polishing skill edit feature. Fixed bug with underscores breaking the edit feature, and made skill edit box much less ugly.

--- a/portfolio/src/main/resources/static/styles/evidence/addEvidence.css
+++ b/portfolio/src/main/resources/static/styles/evidence/addEvidence.css
@@ -24,6 +24,11 @@
     margin-bottom: 0.5rem;
 }
 
+#editable-skill-tag {
+    margin: 0 !important;
+    border: none !important;
+}
+
 #evidence-form__form input, #evidence-form__form textarea {
     margin: 0 0 1rem 1rem;
     border: none;
