--- a/portfolio/src/main/resources/templates/templatesEvidence/addEvidence.html
+++ b/portfolio/src/main/resources/templates/templatesEvidence/addEvidence.html
@@ -106,6 +106,9 @@
             </div>
             <input type="hidden" id="evidence-form__hidden-skills-field" name="evidenceSkills"/>
             <p class="evidence-form__error-message" th:text="${skillsError}" />
+            <div class="alert alert-warning" role="alert">
+                This is a warning alert—check it out!
+            </div>
             <input type="hidden" id="evidence-form__hidden--change-skills-field" name="skillsToChange"/>
 
             <!-- Users !-->
