--- a/portfolio/src/main/resources/templates/addEditEvent.html
+++ b/portfolio/src/main/resources/templates/addEditEvent.html
@@ -34,7 +34,7 @@
         <!-- Add/Edit Event Form -->
         <form id="event-form__form" class="flex-column" th:action="@{editEvent-{event}-{project}(project=${parentProjectId}, event=${eventId})}" th:method="post">
             <label for="form__name-field">Event Name *</label>
-            <input type="text" id="form__name-field" class="edit-input" name="eventName" maxlength="30" placeholder="Event Name" th:value="${eventName}" th:pattern="${isNotBlankPattern}" title="Event Name must not be blank and cannot contain special characters" onkeyup="countCharacters()">
+            <input type="text" id="form__name-field" class="edit-input" name="eventName" maxlength="30" placeholder="Event Name" th:value="${eventName}" th:pattern="${isNotBlankPattern}" title="Event Name must not be blank and cannot contain special characters" onkeyup="countCharacters()" required>
             <span id="char_count">30/30 characters remain</span>
             <p th:text="${titleError}" class="form-error-message"></p>
 
