--- a/portfolio/src/main/resources/templates/addEditGroup.html
+++ b/portfolio/src/main/resources/templates/addEditGroup.html
@@ -33,26 +33,29 @@
 
         <!-- Add/Edit Group Form -->
         <form id="group-form__form" class="flex-column" th:action="@{editGroup-{group}(group=${groupId})}" th:method="post">
+            <!--SHORT NAME AS TEACHER/ADMIN-->
             <div th:if="${authUserIsPrivileged}">
                 <label for="group-form__short_name-field">Group Short Name *</label>
                 <p th:text="${shortNameErrorMessage}" class="form-error-message"></p>
-                <input type="text" id="group-form__short_name-field" class="edit-input" name="groupShortName" maxlength="20" placeholder="Group Short Name" th:value="${groupShortName}" th:pattern="${titlePattern}" title="Group Name must not be blank and cannot contain special characters" required onkeyup="countShortNameCharacters()">
+                <input type="text" id="group-form__short_name-field" class="edit-input" name="groupShortName" maxlength="20" placeholder="Group Short Name" th:value="${groupShortName}" th:pattern="${isNotBlankPattern}" title="Group Name must not be blank and cannot contain special characters" required onkeyup="countShortNameCharacters()">
                 <span id="char_count_short_name">20/20 characters remain</span>
                 <p th:text="${shortNameError}" class="form-error-message"></p>
             </div>
+            <!--SHORT NAME AS GROUP MEMBER-->
             <div th:if="${!authUserIsPrivileged}">
                 <label for="group-form__short_name-field">Group Short Name *</label>
                 <p th:text="${shortNameErrorMessage}" class="form-error-message"></p>
 
 <!--                Has a hidden and disabled input field because disabled fields aren't sent with the form whereas hidden ones are-->
-                <input type="text" id="group-form__short_name-field-disabled" class="edit-input" name="groupShortName" maxlength="20" placeholder="Group Short Name" th:value="${groupShortName}" th:pattern="${titlePattern}" title="Group Name must not be blank and cannot contain special characters" required onkeyup="countShortNameCharacters()" disabled>
-                <input type="text" id="group-form__short_name-field" class="edit-input" name="groupShortName" maxlength="20" placeholder="Group Short Name" th:value="${groupShortName}" th:pattern="${titlePattern}" title="Group Name must not be blank and cannot contain special characters" required onkeyup="countShortNameCharacters()" hidden>
+                <input type="text" id="group-form__short_name-field-disabled" class="edit-input" name="groupShortName" maxlength="20" placeholder="Group Short Name" th:value="${groupShortName}" th:pattern="${isNotBlankPattern}" title="Group Name must not be blank and cannot contain special characters" required onkeyup="countShortNameCharacters()" disabled>
+                <input type="text" id="group-form__short_name-field" class="edit-input" name="groupShortName" maxlength="20" placeholder="Group Short Name" th:value="${groupShortName}" th:pattern="${isNotBlankPattern}" title="Group Name must not be blank and cannot contain special characters" required onkeyup="countShortNameCharacters()" hidden>
                 <span id="char_count_short_name">20/20 characters remain</span>
             </div>
 
+            <!--LONG NAME-->
             <label for="group-form__long_name-field">Group Long Name *</label>
             <p th:text="${longNameErrorMessage}" class="form-error-message"></p>
-            <input type="text" id="group-form__long_name-field" class="edit-input" name="groupLongName" maxlength="30" placeholder="Group Long Name" th:value="${groupLongName}" th:pattern="${titlePattern}" title="Group long name must not be blank" required onkeyup="countLongNameCharacters()">
+            <input type="text" id="group-form__long_name-field" class="edit-input" name="groupLongName" maxlength="30" placeholder="Group Long Name" th:value="${groupLongName}" th:pattern="${isNotBlankPattern}" title="Group long name must not be blank" required onkeyup="countLongNameCharacters()">
             <span id="char_count_long_name">30/30 characters remain</span>
             <p th:text="${longNameError}" class="form-error-message"></p>
 
