--- a/portfolio/src/main/resources/templates/fragmentsGroup/groupHome.html
+++ b/portfolio/src/main/resources/templates/fragmentsGroup/groupHome.html
@@ -17,7 +17,7 @@
                         <div class="group-member__container" th:each="member: ${group.getMembers()}">
                             <a class="group-member__link" th:href="@{profile-{id}(id=${member.id})}">
                                 <img class="group-member__image" th:src="${member.getProfileImagePath()}" alt="Profile Photo">
-                                <div class="group-member__name-container" th:text="${member.getFirstLast()}"></div>
+                                <div class="group-member__name-container" th:text="${member.getFirstAndLast()}"></div>
                                 <div class="group-member__nickname" th:text="${member.getNickname()}"></div>
                             </a>
                         </div>
