--- a/portfolio/src/main/resources/static/styles/group/group.css
+++ b/portfolio/src/main/resources/static/styles/group/group.css
@@ -150,6 +150,22 @@ html {
     margin-left: auto;
 }
 
+/* Group Statistics */
+.group-chart__settings-div {
+    margin: 1rem 0 1rem 0;
+    border-radius: 10px;
+    background-color: var(--color-secondary);
+    padding: 25px;
+    color: black;
+    font-size: 20px;
+}
+
+#group-chart__graph-div {
+    display: flex;
+    height: 800px;
+}
+
+
 /* Group Repository */
 
 #group-repository-form__wrapper {
@@ -215,11 +231,11 @@ html {
 }
 
 .repository_container {
+    background-color: var(--color-secondary);
     margin: 1rem 0 1rem 0;
     visibility: visible;
-    border: 1px solid var(--color-accent);
     border-radius: 10px;
-    background-color: var(--color-complement);
+
 }
 
 #open-modal__button {
