--- a/portfolio/src/main/resources/static/styles/evidence/evidence.css
+++ b/portfolio/src/main/resources/static/styles/evidence/evidence.css
@@ -75,7 +75,8 @@ html {
 .evidence-title__weblinks-commits-div {
     display: flex;
     flex-direction:row;
-    padding-bottom: 20px;
+    padding-top: 25px;
+    margin-left: auto;
 }
 
 #evidence-title__weblinks {
@@ -86,12 +87,11 @@ html {
 /** Evidence delete and edit buttons */
 
 .evidence-title-div__buttons {
-    margin-left: auto;
+    display: flex;
+    flex-direction: row;
 }
 
 .evidence-title-div__button {
-    float: right;
-    display: inline;
     padding: 25px 10px 25px 10px;
     margin: 0 -20px 0 0;
     font-size: 15px;
@@ -124,7 +124,7 @@ html {
     padding: 5px 0 4px 0;
 }
 
-.evidence-title--icon_container:hover {
+.evidence-title--icon_container:hover, .evidence-title--icon_container-delete:hover {
     color: black;
     background-color: rgba(168, 40, 16, 0.3); /* Accent Colour */
 }
@@ -133,15 +133,35 @@ html {
     font-size: 25px;
 }
 
+.evidence-title__name-date-div {
+    width: 90%;
+    display: flex;
+    flex-direction: row;
+}
 
-.evidence__title, .evidence__date {
+.evidence__date {
     margin: 0 1rem 0 0;
     padding: 0;
     float: left;
     height: 5rem;
     line-height: 5rem;
-
     cursor: pointer;
+    width: 30%;
+    font-size: 25px;
+}
+
+.evidence__title {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    margin: 0 5px 0 0;
+    padding: 0;
+    float: left;
+    height: 5rem;
+    line-height: 5rem;
+    cursor: pointer;
+    width: 69%;
+    font-size: 25px;
 }
 
 .evidence-title__child:hover, .evidence__title--icon_container:hover {
@@ -165,6 +185,7 @@ html {
 .evidence__description {
     overflow-wrap: anywhere;
     margin: 0 0 1rem;
+    font-size: 20px;
 }
 
 .weblink-modal__header {
