--- a/portfolio/src/main/resources/templates/fragments/evidence.html
+++ b/portfolio/src/main/resources/templates/fragments/evidence.html
@@ -14,7 +14,7 @@
                  th:data-bs-target="'#evidence_' + ${evidence.getId}">
             <div class="evidence-title__name-date-div">
                 <h2 class="evidence__title" th:text="${evidence.getTitle}"></h2>
-                <h3 class="evidence__date" th:text="' - ' + ${evidence.getDateString} "></h3>
+                <h3 class="evidence__date" th:text="${evidence.getDateString} "></h3>
             </div>
               <div class="evidence-title__weblinks-commits-div">
                   <div id="evidence-title__weblinks">
