#Feature added getting weblinks from the addevidence form into addevidence controller

--- a/portfolio/src/main/resources/templates/templatesEvidence/addEvidence.html
+++ b/portfolio/src/main/resources/templates/templatesEvidence/addEvidence.html
@@ -130,7 +130,8 @@
                 Add Weblink
               </button>
             </div>
-            <input type="hidden" id="evidence-form__hidden-webLinks-field" name="evidenceWebLinks"/>
+            <input type="hidden" id="evidence-form__hidden-webLinks-names" name="evidenceWebLinkNames"/>
+            <input type="hidden" id="evidence-form__hidden-webLinks-links" name="evidenceWebLinks"/>
             <!-- Users !-->
             <label>Users
                 <span data-toggle="tooltip"
