#feature Fixed more issues with editing skills bought up in review.

--- a/portfolio/src/main/resources/static/styles/evidence/addEvidence.css
+++ b/portfolio/src/main/resources/static/styles/evidence/addEvidence.css
@@ -61,6 +61,7 @@
 .evidence-form__control-button:hover {
     background-color: rgba(168, 40, 16, 0.3); /* Accent Colour */
     cursor: pointer;
+    color: black;
 }
 
 .evidence-form__control-button:disabled {
