--- a/portfolio/src/main/resources/templates/templatesEvidence/addEvidence.html
+++ b/portfolio/src/main/resources/templates/templatesEvidence/addEvidence.html
@@ -141,7 +141,7 @@
 
             <!-- Commits !-->
             <div th:if="${displayCommits}">
-                <button type="button" class="btn btn-primary evidence-form__add-commits-button">Add Commits</button>
+                <button type="button" class="btn btn-primary evidence-form__add-commits-button" id="open-modal__button" data-bs-toggle="modal" data-bs-target="#group-repository-settings__modal">Add Commits</button>
             </div>
 
             <!-- Submit form !-->
@@ -149,6 +149,24 @@
             <a class="evidence-form__control-button" id="evidence-form__discard" th:href="@{portfolio}">Discard</a>
             <p class="evidence-form__error-message" th:text="${generalError}" />
         </form>
+    </div>
+
+    <!-- Commits Modal -->
+    <div class="modal fade" id="group-repository-settings__modal" tabindex="-1" aria-labelledby="group-repository__modal--label" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header group-repository-form__header">
+                    <h5 class="modal-title" id="group-repository__modal--label">Repository Settings</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" onclick="updateGroupRepositoryElement(false)"></button>
+                </div>
+                <div class="modal-body group-repository-form__wrapper">
+                    <div th:each="commit: ${commits}">
+                        <div th:text="${commit.id}"></div>
+                        <input type="checkbox"/>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <script rel="script" th:src="@{scripts/evidence/addEvidence.js}"></script>
