--- a/portfolio/src/main/resources/templates/templatesGroup/group.html
+++ b/portfolio/src/main/resources/templates/templatesGroup/group.html
@@ -6,8 +6,8 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <link th:rel="stylesheet" th:href="@{webjars/bootstrap/5.1.3/css/bootstrap.min.css} "/>
   <script th:src="@{webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
-  <script src="https://www.gstatic.com/charts/loader.js"></script>
-
+<!--  <script src="https://www.gstatic.com/charts/loader.js"></script>-->
+  <script type="module" th:src="@{webjars/google-web-components__google-chart/4.0.0/loader.js}"></script>
   <link rel="stylesheet" th:href="@{styles/stylesheet.css}">
   <link rel="stylesheet" th:href="@{styles/group/group.css}">
   <link rel="stylesheet" th:href="@{styles/group/groups.css}">
