--- a/portfolio/src/main/resources/templates/templatesGroup/group.html
+++ b/portfolio/src/main/resources/templates/templatesGroup/group.html
@@ -29,7 +29,7 @@
 <div id="page-content" class="constrict">
   <div id="group">
     <header class="group_header flex-column">
-      <h1 class="group-short_name" th:text="${group.getShortName()}"></h1>
+      <h1 class="group-short_name" th:text="${currentProject.getName} + ': ' + ${group.getShortName()}"></h1>
       <h2 class="group-long_name" th:text="${group.getLongName()}"></h2>
     </header>
   </div>
