--- a/portfolio/src/main/resources/static/styles/group/group.css
+++ b/portfolio/src/main/resources/static/styles/group/group.css
@@ -253,4 +253,20 @@ html {
     margin: 1rem;
 }
 
+.group-statistics__flex-container {
+    display: flex;
+    flex-direction:column;
+}
+
+.skills-categories-chart__flex-container {
+    display: flex;
+    flex-direction: row;
+}
+
+#group-chart__categories-chart, #group-chart__skills-chart, #group-chart__evidence-chart {
+    flex-grow: 1;
+    overflow: hidden;
+
+}
+
 
