#feature Commits now appear on the add evidence page when the add commit form is completed. They can be deleted from here. The feature still needs polish.

--- a/portfolio/src/main/resources/static/styles/evidence/addEvidence.css
+++ b/portfolio/src/main/resources/static/styles/evidence/addEvidence.css
@@ -247,3 +247,8 @@ p {
 #users-input:focus {
     outline: none;
 }
+
+#add-evidence-commits__wrapper {
+    display: flex;
+    flex-direction: row;
+}
