--- a/portfolio/src/main/resources/templates/templatesEvidence/addEvidence.html
+++ b/portfolio/src/main/resources/templates/templatesEvidence/addEvidence.html
@@ -141,7 +141,9 @@
 
             <!-- Commits !-->
             <div th:if="${displayCommits}">
-                <button type="button" class="btn btn-primary evidence-form__add-commits-button" id="open-modal__button" data-bs-toggle="modal" data-bs-target="#group-repository-settings__modal">Add Commits</button>
+                <button type="button" class="btn btn-primary evidence-form__add-commits-button" id="open-modal__button" data-bs-toggle="modal" data-bs-target="#add-evidence-commits__modal">Add Commits</button>
+                <div id="commit-container"></div>
+                <input type="hidden" id="evidence-form__hidden-commits-field" name="evidenceCommits"/>
             </div>
 
             <!-- Submit form !-->
@@ -152,18 +154,21 @@
     </div>
 
     <!-- Commits Modal -->
-    <div class="modal fade" id="group-repository-settings__modal" tabindex="-1" aria-labelledby="group-repository__modal--label" aria-hidden="true">
+    <div class="modal fade" id="add-evidence-commits__modal" tabindex="-1" aria-labelledby="add-evidence-commits--label" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="modal-header group-repository-form__header">
-                    <h5 class="modal-title" id="group-repository__modal--label">Repository Settings</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" onclick="updateGroupRepositoryElement(false)"></button>
+                <div class="modal-header add-evidence-commits__header">
+                    <h5 class="modal-title" id="add-evidence-commits__modal--label">Add Commits</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body group-repository-form__wrapper">
-                    <div th:each="commit: ${commits}">
-                        <div th:text="${commit.id}"></div>
-                        <input type="checkbox"/>
+                <div class="modal-body add-evidence-commits__wrapper">
+                    <div id="commit-selection-box">
+                        <div th:each="commit: ${commits}" th:id="${commit.id}" class="row">
+                            <div class="col-10" th:text="${commit.id}"></div>
+                            <input class="col-auto" type="checkbox"/>
+                        </div>
                     </div>
+                    <button onclick="saveCommitChanges()" data-bs-dismiss="modal">Save Changes</button>
                 </div>
             </div>
         </div>
