--- a/portfolio/src/main/resources/static/styles/evidence/addEvidence.css
+++ b/portfolio/src/main/resources/static/styles/evidence/addEvidence.css
@@ -81,6 +81,11 @@
     margin-bottom: 15px;
 }
 
+.add-evidence-commits__wrapper {
+    display: flex;
+    flex-direction: column;
+}
+
 /* skill and user input */
 
 .input-container {
@@ -167,11 +172,24 @@ p {
     text-align: center;
 }
 
-.skill-tag-inside {
+.skill-tag-inside, .commit-tag-inside {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+
+.commit-modal-inside {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    align-items: left;
+    border-bottom: 1px solid #dee2e6;
+    margin-bottom: 5px;
+}
+
+.commit-tag-outside {
+    justify-content: center;
 }
 
 #skills-input {
@@ -242,6 +260,11 @@ p {
 
 .user-tag-nickname {
     color: #636363;
+}
+
+.commit-author {
+    color: #636363;
+    font-size: small;
 }
 
 #users-input {
