#feature Commits are now sent to spring in JSON format.

--- a/portfolio/src/main/resources/static/styles/evidence/addEvidence.css
+++ b/portfolio/src/main/resources/static/styles/evidence/addEvidence.css
@@ -86,6 +86,10 @@
     flex-direction: column;
 }
 
+#commit-container {
+    margin-bottom: 10px;
+}
+
 /* skill and user input */
 
 .input-container {
