--- a/portfolio/src/main/resources/templates/templatesGroup/group.html
+++ b/portfolio/src/main/resources/templates/templatesGroup/group.html
@@ -17,6 +17,8 @@
     const GROUP_ID = [[${group.getGroupId}]];
     const userInGroup = [[${userInGroup}]];
     const authUserIsTeacher = [[${authUserIsTeacher}]];
+    const START_DATE = [[${graphStartDate}]];
+    const END_DATE  = [[${graphEndDate}]];
   </script>
 </head>
 
