#Feature make skills graph display below category graph.

--- a/portfolio/src/main/resources/static/styles/group/group.css
+++ b/portfolio/src/main/resources/static/styles/group/group.css
@@ -260,7 +260,7 @@ html {
 
 .skills-categories-chart__flex-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 }
 
 #group-chart__categories-chart, #group-chart__skills-chart, #group-chart__evidence-chart {
