#Feature Update styling to make charts bigger

--- a/portfolio/src/main/resources/static/styles/group/group.css
+++ b/portfolio/src/main/resources/static/styles/group/group.css
@@ -260,12 +260,14 @@ html {
 
 .skills-categories-chart__flex-container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: center;
 }
 
 #group-chart__categories-chart, #group-chart__skills-chart, #group-chart__evidence-chart {
     flex-grow: 1;
     overflow: hidden;
+    height: 500px;
 }
 
 
