--- a/portfolio/src/main/resources/templates/templatesGroup/groups.html
+++ b/portfolio/src/main/resources/templates/templatesGroup/groups.html
@@ -74,7 +74,7 @@
                             <button type="submit">View</button>
                         </form>
                         <div class="flex-row" th:if="${authUserIsTeacher || #lists.contains(group.getMembers, user)}">
-                            <button onclick="removeSelectedUsers(this)" hidden="hidden" th:class="'group_' + ${group.getGroupId} + '_remove_users_button'">Remove Selection</button>
+                            <button onclick="removeSelectedUsers(this)" hidden="hidden" th:class="'group_' + ${group.getGroupId} + '_remove_users_button'">Remove Selected Users</button>
                             <form th:action="@{editGroup-{id}(id=${group.getGroupId})}" th:method="get" th:if="${group.getGroupId} >= 0")>
                                 <button type="submit">Edit</button>
                             </form>
