#feature made evidence form save skills that have been typed but space hasn't been pressed after

--- a/portfolio/src/main/resources/templates/templatesEvidence/addEvidence.html
+++ b/portfolio/src/main/resources/templates/templatesEvidence/addEvidence.html
@@ -157,7 +157,7 @@
             </div>
 
             <!-- Submit form !-->
-            <button type="submit" class="evidence-form__control-button" id="evidence-form__save" disabled>Save Changes</button>
+            <button type="button" class="evidence-form__control-button" onclick="submitForm()" id="evidence-form__save">Save Changes</button>
             <a class="evidence-form__control-button" id="evidence-form__discard" th:href="@{portfolio}">Discard</a>
             <p class="evidence-form__error-message" th:text="${generalError}" />
         </form>
